[package]
name = "tx_data_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
rand = "0.8.4"
csv = "1.1"
log = "0.4.14"
env_logger = "0.9.0"